# well-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_well_state_detection.ipynb  03_position_reconstruction.ipynb  04_dynamometer_card.ipynb  04_dynamometer_card_lite.ipynb  05_operating_conditions.ipynb
notebooks/_backup/: 05_operating_conditions.pre_toc_refactor.ipynb
src/well_analysis/: __init__.py
src/well_analysis/analysis/: __init__.py  clustering.py  dynamometer.py  q8.py  q9.py
src/well_analysis/data/: __init__.py  loader.py
src/well_analysis/detection/: __init__.py  well_state.py
src/well_analysis/signal/: __init__.py  integration.py  sampling.py
src/well_analysis/viz/: __init__.py  plots.py
tests/: test_detection.py  test_integration.py  test_sampling.py
